# kayfabe

./: .gitignore  docker-compose.yml  icon.svg.import  project.godot  test.gd
actors/: base_actor.gd  base_actor.gd.uid
addons/swatch_palette/: palette.gd  palette.gd.uid  plugin.gd  plugin.gd.uid
api-server/: Cargo.toml
apps/conversation/: app_manifest.tres  chat_message.gd.uid  chat_message.tscn  chat_panel.gd  chat_panel.tscn  chat_thread.gd  chat_thread.gd.uid  chat_thread.tscn  service.gd  service.gd.uid  thread_container.gd  thread_container.gd.uid
apps/eyes/: control.gd  control.gd.uid  eyes.gd.uid  eyes.tscn  icon.png.import  service.gd  service.gd.uid  smile_icon.tres
apps/files/: app_manifest.tres  service.gd  service.gd.uid  window.gd  window.gd.uid  window.tscn
apps/image_viewer/: service.gd  service.gd.uid  viewer.gd  viewer.gd.uid  viewer.tscn
framework/: app_service.gd  app_service.gd.uid  app_window.gd  app_window.gd.uid  app_window_user_button.gd  app_window_user_button.gd.uid  default_app_window_frame.gd  default_app_window_frame.gd.uid  desktop.gd  desktop.tscn  document.gd  framework.gd  framework.gd.uid  json_resource.gd  json_resource.gd.uid  launcher.gd  launcher.tscn  launcher_row.tscn  launcher_theme.tres  object_json.gd  tagged_message.gd.uid  uuid.gd  uuid.gd.uid  weak_callable.gd.uid
kayfabe/: .gitignore  project.godot
lobby-server/: Cargo.toml  Dockerfile
lobby-server/src/: appstate.rs  main.rs  spawn.rs  websocket.rs
nginx/: Dockerfile  nginx.conf
scenes/: gameplay_desktop.gd  gameplay_desktop.tscn
(+274 files in other folders)
