[package]
name = "kayfabe-lobby-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["ws"] }
base64 = "0.22.1"
futures-util = "0.3.31"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-attributes = "0.1.28"
tracing-subscriber = "0.3.19"
